<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <FrameLayout
        android:id="@+id/cardFrame"
        android:layout_width="8dp"
        android:layout_height="match_parent"
        android:background="@color/colorAccentDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/iconLayout"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/itemBitmapCardView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardElevation="0dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/itemBitmap"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/item_bitmap"
                            android:scaleType="centerCrop"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/itemIcon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerInParent="true"
                            android:background="@drawable/circle_shape"
                            android:contentDescription="@string/item_icon"
                            android:padding="3dp"
                            app:tint="@color/colorWhite" />

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/syncIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/itemBitmapCardView"
                    android:layout_marginStart="-14dp"
                    android:layout_marginTop="-14dp"
                    android:layout_marginBottom="-12dp"
                    android:layout_toEndOf="@+id/itemBitmapCardView"
                    android:background="@drawable/circle_shape"
                    android:contentDescription="@string/sync_icon"
                    android:padding="3dp"
                    app:tint="@color/colorWhite" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="0dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:id="@+id/itemLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/itemTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/item_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/rightText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:maxLines="1"
                        android:text="@string/item_right_text"
                        android:textSize="12sp" />

                    <ImageButton
                        android:id="@+id/deleteButton"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/circle_shape"
                        app:srcCompat="@drawable/ic_delete_forever_black_12dp"
                        android:backgroundTint="@color/colorWarn"
                        app:tint="@color/colorWhite" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/itemSubtitleLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itemLinearLayout"
                    android:layout_alignParentStart="true">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp">

                        <TextView
                            android:id="@+id/itemSubtitle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/item_subtitle_1"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/itemSubtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/itemSubtitle1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/item_subtitle_2"
                            android:textSize="12sp" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/synButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="24dp"
                        android:backgroundTint="@color/colorAccent"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:textColor="@color/colorWhite"
                        android:visibility="gone"
                        android:text="@string/sync"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/importConflictsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:clipToPadding="false"
            tools:listitem="@layout/sub_list_item" />

    </LinearLayout>

</androidx.cardview.widget.CardView>